# pyml-regression-example1

./: .pre-commit-config.yaml  Makefile  README.md  development.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  pyproject.toml  results.html  search.html  searchindex.js  theory.html  todo.html  usage.html
.github/workflows/: ci.yml  doc_pages.yml
_sources/: index.rst.txt  results.rst.txt  theory.rst.txt
docker/: Dockerfile  check_unstaged_files.sh
docs/: conf.py  installation.rst  theory.rst
docs/theory/: least_squares.rst
src/life_expectancy/: constants.py  helpers.py  main.py
tests/: common.py  conftest.py  test_helpers.py  test_main.py
tests/files/data/: gdp-per-capita-worldbank.csv  oecd_bli_2024.csv
theory/: least_squares.html  linear_regression.html
