[project]
name = "pyml-regression-example1"
version = "0.1.0"
description = "Python Machine Learning Regression Example: Life Expectancy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "colorama>=0.4.6",
    "platformdirs>=4.3.6",
    "scikit-learn>=1.5.2",
    "sphinx-click-rst-to-ansi-formatter>=0.1.1",
]
packages = [{include = "life_expectancy", from = "src"}]

[project.scripts]
life-expectancy = "life_expectancy.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/life_expectancy"]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.1",
    "mypy>=1.11.2",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "ruff>=0.6.6",
    "types-colorama>=0.4.15.20240311",
]
